--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-parallax-tilt": "^1.5.85",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "4.0.2",
     "react-tsparticles": "^1.39.0",
     "tachyons": "^4.12.0"
   },
